--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,44 @@ body {
   --light-bgc: #f7f7f7;
   --dark-bgc: #191c26;
 }
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding-left: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+button {
+  display: block;
+  padding: 12px 20px;
+  cursor: pointer;
+
+  border: 1px solid var(--accent-color);
+  border-radius: 25px;
+  background-color: transparent;
+}
+
+.container {
+  width: 1170px;
+  margin: 0 auto;
+  outline: 1px solid red;
+}
+
 .link {
   text-decoration: none;
 }
@@ -26,7 +64,30 @@ header {
   background-color: #555555;
 }
 
-.header-link {
+.header-logo {
+  padding: 20px 0;
+}
+
+.header-list {
+  display: flex;
+  align-items: center;
+  margin-left: 131px;
+  margin-right: 254px;
+}
+
+.header-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-link,
+.header-tel {
+  padding: 20px 0;
+
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
@@ -57,6 +118,9 @@ header {
 }
 
 .header-btn {
+  margin-left: auto;
+  margin-right: 20px;
+
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
@@ -66,8 +130,6 @@ header {
   text-transform: uppercase;
 
   color: var(--main-title-color);
-
-  cursor: pointer;
 }
 
 /* --------------------HERO-------------------- */
