--- a/css/styles.css
+++ b/css/styles.css
@@ -39,12 +39,15 @@ button {
   padding: 12px 20px;
   cursor: pointer;
 
+  min-width: 160px;
+
   border: 1px solid var(--accent-color);
   border-radius: 25px;
   background-color: transparent;
 }
 
 .container {
+  padding: 0 15px;
   width: 1170px;
   margin: 0 auto;
   outline: 1px solid red;
@@ -64,6 +67,11 @@ header {
   background-color: #555555;
 }
 
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
 .header-logo {
   padding: 20px 0;
 }
@@ -77,11 +85,6 @@ header {
 
 .header-item:not(:last-child) {
   margin-right: 30px;
-}
-
-.header-container {
-  display: flex;
-  align-items: center;
 }
 
 .header-link,
@@ -134,8 +137,8 @@ header {
 
 /* --------------------HERO-------------------- */
 
-.hero {
-  background-color: #555555;
+.hero-container {
+  display: flex;
 }
 
 .hero-link {
@@ -154,6 +157,18 @@ header {
   color: var(--accent-color);
 }
 
+.hero-content {
+  padding: 272px 100px 208px 100px;
+  flex-grow: 1;
+
+  background-color: #555555;
+}
+
+.hero-list {
+  width: 100px;
+  background-color: #ffffff;
+}
+
 .hero-pre-title {
   font-weight: 600;
   font-size: 11px;
@@ -165,6 +180,8 @@ header {
 }
 
 .hero-title {
+  margin: 20px 0;
+
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 700;
@@ -176,6 +193,8 @@ header {
 }
 
 .hero-descr {
+  max-width: 360px;
+
   font-weight: 400;
   font-size: 18px;
   line-height: 1.67;
@@ -186,7 +205,24 @@ header {
 
 /* --------------------ABOUT-------------------- */
 
+.about .container {
+  padding: 120px 15px;
+  display: flex;
+  gap: 30px;
+}
+
+.about-content {
+  max-width: 470px;
+}
+
+.about-list {
+  display: flex;
+  gap: 30px;
+}
+
 .about-pre-title {
+  margin-bottom: 20px;
+
   font-weight: 600;
   font-size: 11px;
   line-height: 1.36;
@@ -195,7 +231,10 @@ header {
 
   color: var(--title-color);
 }
+
 .about-title {
+  margin-bottom: 20px;
+
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 700;
@@ -207,6 +246,8 @@ header {
 }
 
 .about-after-title {
+  margin-bottom: 20px;
+
   font-weight: 400;
   font-size: 18px;
   line-height: 1.67;
@@ -216,6 +257,8 @@ header {
 }
 
 .about-descr {
+  margin-bottom: 42px;
+
   font-weight: 400;
   font-size: 14px;
   line-height: 1.86;
@@ -244,7 +287,13 @@ header {
   background-color: #555555;
 }
 
+.price .container {
+  padding: 120px 15px;
+}
+
 .price-pre-title {
+  margin-bottom: 20px;
+
   font-weight: 600;
   font-size: 11px;
   line-height: 1.36;
@@ -255,6 +304,8 @@ header {
 }
 
 .price-title {
+  margin-bottom: 44px;
+
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 700;
@@ -263,6 +314,22 @@ header {
   letter-spacing: 0.05em;
 
   color: var(--main-title-color);
+}
+
+.price-content {
+  display: flex;
+  gap: 30px;
+  /* justify-content: space-between; */
+}
+
+.price-list {
+  outline: 1px solid white;
+  padding: 30px 20px;
+  width: calc(50% - 15px);
+}
+
+.price-item:not(:last-child) {
+  margin-bottom: 20px;
 }
 
 .price-name {
@@ -278,12 +345,13 @@ header {
   font-weight: 400;
   font-size: 18px;
   line-height: 1.67;
-  text-align: right;
   letter-spacing: 0.02em;
 
   color: var(--second-text-color);
 }
 .price-btn {
+  margin: 44px auto 0 auto;
+
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 600;
@@ -299,7 +367,25 @@ header {
 
 /* --------------------BENEFITS-------------------- */
 
+.benefits .container {
+  padding: 120px 15px;
+  display: flex;
+}
+
+.benefits-list {
+  padding-right: 100px;
+  padding-left: 100px;
+
+  display: flex;
+  flex-wrap: wrap;
+  /* gap: 30px; */
+}
+
 .benefits-item {
+  width: 170px;
+  height: 133px;
+  padding: 20px 24px;
+
   background-color: var(--light-bgc);
 }
 
@@ -351,6 +437,8 @@ header {
 }
 
 .benefits-after-title {
+  /* max-width: 500px; */
+
   font-weight: 400;
   font-size: 18px;
   line-height: 1.67;
